--- a/bower.json
+++ b/bower.json
@@ -1,24 +1,14 @@
 {
-  "name": "ikagaka.namedmanager.js",
-  "version": "4.0.2",
-  "description": "Ikagaka Window Manager",
+  "name": "demo",
+  "version": "0.0.0",
+  "description": "demo",
   "license": "MIT",
   "dependencies": {
-    "surfaces_txt2yaml": "Narazaka/surfaces_txt2yaml",
-    "encoding-japanese": "~1.0.23",
-    "text-encoding": "~0.5.3",
-    "jszip": "*",
-    "eventemitter2": "~0.4.14",
-    "jquery": "*"
+    "ikagaka.namedmanager.js": "Ikagaka/NamedManager.js",
+    "NarLoader": "Ikagaka/NarLoader"
   },
   "devDependencies": {
-    "qunit": "*",
-    "narloader": "*",
-    "qunit-tap": "*",
-    "empower": "*",
-    "power-assert-formatter": "*"
   },
-  "main": "./dist/NamedManager.js",
   "ignore": [
     "**/.*",
     "bower_components",
