--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "ikagaka.namedmanager.js": "Ikagaka/NamedManager.js",
-    "NarLoader": "Ikagaka/NarLoader"
+    "narloader": "Ikagaka/NarLoader"
   },
   "devDependencies": {
   },
